--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,6 +5,9 @@ azure-functions>=1.18.0
 azure-identity>=1.15.0
 requests>=2.31.0
 
+# Database connectivity
+pyodbc>=5.0.0
+
 # Additional packages
 python-dateutil>=2.8.2
 python-multipart>=0.0.6
