Implement fraud detection: doctor must exist in database or document is rejected

--- a/api/local.settings.json.example
+++ b/api/local.settings.json.example
@@ -6,9 +6,7 @@
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
     "AZURE_CONTENT_UNDERSTANDING_ENDPOINT": "https://your-resource-name.services.ai.azure.com/",
     "AZURE_CONTENT_UNDERSTANDING_ANALYZER_ID": "your-analyzer-id",
-    "SQL_SERVER": "sql-demo-server-sociale-fraude.database.windows.net",
-    "SQL_DATABASE": "sql-demo-database-sociale-fraude",
-    "SQL_USERNAME": "CloudSAd4543b78",
-    "SQL_PASSWORD": "{your_password}"
+    "SQL_SERVER": "your-sql-server.database.windows.net",
+    "SQL_DATABASE": "your-database-name"
   }
 }
